<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_alignParentTop="true">
    <TextView
        android:id="@+id/txtTituloAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:text="ALTERAÇÃO DE CONTATO"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/edtAltNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edtAltApelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apelido"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"/>

    <br.com.fernandoaag.agendaapp.Utils.DataEditText
        android:id="@+id/edtAltDtNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="5dp"
        />

    <br.com.fernandoaag.agendaapp.Utils.PhoneEditText
        android:id="@+id/edtAltTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edtAltEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAltTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnALtTipo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:spinnerMode="dropdown"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salvar Preferência"
            android:id="@+id/btnALtSalvarPref"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnAlterar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="55dp"
            android:text="@string/alterar" />
        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluir" />
    </LinearLayout>
</LinearLayout>