<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_alignParentTop="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff"
        android:title="@string/app_name"/>
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:text="CADASTRO DE CONTATO"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/edtCadNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edtCadApelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apelido"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"/>

    <br.com.fernandoaag.agendaapp.Utils.DataEditText
        android:id="@+id/edtCadDtNasc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="5dp"
        />

    <br.com.fernandoaag.agendaapp.Utils.PhoneEditText
        android:id="@+id/edtCadTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edtCadEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCadTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnTipo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:spinnerMode="dropdown"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salvar Preferência"
            android:id="@+id/btnSalvarPref"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />
    </LinearLayout>
</LinearLayout>
